--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,73 @@
-# Qt Creator
-*.pro.user
-*.pro.user.*
-*.qrc.*
+# This file is used to ignore files which are generated
+# ----------------------------------------------------------------------------
 
-# Build files
-build/
+*~
+*.autosave
+*.a
+*.core
+*.moc
 *.o
 *.obj
-*.exe
-*.dll
-*.pdb
-
-# Qt auto-generated files
+*.orig
+*.rej
+*.so
+*.so.*
+*_pch.h.cpp
+*_resource.rc
+*.qm
+.#*
+*.*#
+core
+!core/
+tags
+.DS_Store
+.directory
+*.debug
+Makefile*
+*.prl
+*.app
 moc_*.cpp
 ui_*.h
 qrc_*.cpp
-*.autosave
-*.log
-*.ninja_log
-*.json
-*.txt
+Thumbs.db
+*.res
+*.rc
+/.qmake.cache
+/.qmake.stash
 
-# IDE files
-.qtcreator/
+# qtcreator generated files
+*.pro.user*
+
+# xemacs temporary files
+*.flc
+
+# Vim temporary files
+.*.swp
+
+# Visual Studio generated files
+*.ib_pdb_index
+*.idb
+*.ilk
+*.pdb
+*.sln
+*.suo
+*.vcproj
+*vcproj.*.*.user
+*.ncb
+*.sdf
+*.opensdf
+*.vcxproj
+*vcxproj.*
+
+# MinGW generated files
+*.Debug
+*.Release
+
+# Python byte code
+*.pyc
+
+# Binaries
+# --------
+*.dll
+*.exe
+
